objects/Redbook_Valuation__c.object
<CustomObject>
    <fields>
        <fullName>AvgRetail__c</fullName>
        <label>AvgRetail</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BadgeDescription__c</fullName>
        <description>Badge description of the model (e.g. X for base model Forester), matching Variant in Veda (TBC).</description>
        <label>BadgeDescription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>Full description of vehicle (Series in Veda).</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FamilyDescription__c</fullName>
        <description>The model or family of the vehicle, model in Veda (e.g. Forester)</description>
        <label>FamilyDescription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MakeDescription__c</fullName>
        <description>The manufacturer of the vehicle, Make in Veda (e.g. Subaru)</description>
        <label>MakeDescription</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bike</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorbike</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VehicleKey__c</fullName>
        <description>Redbook Vehicle ID</description>
        <externalId>true</externalId>
        <label>VehicleKey</label>
        <length>16</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>YearGroup__c</fullName>
        <description>The year of manufacture (year of first sale)</description>
        <label>YearGroup</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Redbook Valuation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MakeDescription__c</columns>
        <columns>FamilyDescription__c</columns>
        <columns>Description__c</columns>
        <columns>Type__c</columns>
        <columns>NAME</columns>
        <columns>VehicleKey__c</columns>
        <columns>BadgeDescription__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Hondas</fullName>
        <columns>MakeDescription__c</columns>
        <columns>FamilyDescription__c</columns>
        <columns>YearGroup__c</columns>
        <columns>Description__c</columns>
        <columns>Type__c</columns>
        <columns>NAME</columns>
        <columns>VehicleKey__c</columns>
        <columns>BadgeDescription__c</columns>
        <columns>AvgRetail__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MakeDescription__c</field>
            <operation>equals</operation>
            <value>Honda</value>
        </filters>
        <filters>
            <field>YearGroup__c</field>
            <operation>greaterOrEqual</operation>
            <value>2008</value>
        </filters>
        <label>Hondas</label>
    </listViews>
    <nameField>
        <displayFormat>RED-{0000000000}</displayFormat>
        <label>Redbook Valuation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Redbook Valuations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>